syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.finance.trade.grpc";
option java_outer_classname = "TrdOrderProto";
option objc_class_prefix = "TRD";

service TrdOrderService {
    rpc getOrderInfo (TrdOrderInfoQuery) returns (TrdOrderInfo) {}
}

message TrdOrderInfoQuery {
  string order_id = 1;
}
